--- a/web/Views/Watchlist/Index.cshtml
+++ b/web/Views/Watchlist/Index.cshtml
@@ -5,12 +5,12 @@
 }
 
 <input type="hidden" id="saved-theme" value="@ViewBag.mode" />
-<h1>My Watchlist</h1>
-
-<table class="table">
+<h1>Public Watchlists</h1>
+<hr />
+<table class="table striped-table table-hover" id="watchlists-table">
     <thead>
         <tr>
-            <th>
+            <th class="mainpage-table-name">
                 @Html.DisplayNameFor(model => model.User)
             </th>
             <th></th>
@@ -21,12 +21,12 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td class="email_prikaz">
+                <td class="email_prikaz mainpage-table-name">
 
                     @Html.DisplayFor(modelItem => item.OwnerId.Email);
                 </td>
-                <td>
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <td class="mainpage-table-name">
+                    <a asp-action="Details" asp-route-id="@item.Id" class="details_link">Details</a>
                 </td>
             </tr>
         }
@@ -34,9 +34,7 @@
 </table>
 
 <script>
-
     let td_list = document.getElementsByClassName("email_prikaz");
-    console.log(td_list)
     for (let index = 0; index < td_list.length; index++) {
         td_list[index].innerHTML = td_list[index].innerHTML.substring(0, td_list[index].innerHTML.indexOf(String.fromCharCode(64)));
     }
@@ -51,11 +49,16 @@
             const partial_footerTheme = document.getElementById("partial_footer");
             const nav_linkTheme = document.getElementsByClassName("nav-link2");
             const navbar_gearTheme = document.getElementById("navbar_gear");
+            const table = document.getElementById("watchlists-table");
             if (theme == "dark") {
                 navbar_gearTheme.setAttribute("fill", "#f5acc6");
+                table.classList.add("dark-theme");
+                table.classList.remove("light-theme");
             }
             else {
                 navbar_gearTheme.setAttribute("fill", "#392d31");
+                table.classList.add("light-theme");
+                table.classList.remove("dark-theme");
             }
             document.body.className = theme === "dark" ? "dark-mode" : "light-mode";
             navbarTheme.className = theme === "dark" ? "dark-mode" : "light-mode";
